start adding items from the pdbx/mmcif dictionary
data design is fully mutable due to the loose restraints on the data and required values for pdbx files.

--- a/src/BioCif/BioCif.csproj
+++ b/src/BioCif/BioCif.csproj
@@ -5,4 +5,8 @@
     <IsTestProject>False</IsTestProject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BioCif.Core\BioCif.Core.csproj" />
+  </ItemGroup>
+
 </Project>
