add doc comments and rename types for core
core generates documentation file on build. these changes clear up warnings for public members without doc-comments. also renames table to datatable and makes row a member of the data table.

version is also renamed to cif file version to avoid conflicts with system.version.

--- a/src/BioCif.Core/BioCif.Core.csproj
+++ b/src/BioCif.Core/BioCif.Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsTestProject>False</IsTestProject>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
