prepare core package for publish
adds necessary nuget information to the core project and adds net45 as a target framework.

--- a/src/BioCif.Core/BioCif.Core.csproj
+++ b/src/BioCif.Core/BioCif.Core.csproj
@@ -1,9 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
     <IsTestProject>False</IsTestProject>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Authors>EliotJones</Authors>
+    <Company />
+    <Version>1.0.0-beta001</Version>
+    <Description>Parses and tokenizes Crystallographic Information File (CIF) files from the Crystallographic Information Framework such as PDBx/mmCIF files used by the protein data bank (PDB). This package contains the core parser, tokenizer and data types used by any CIF file including the crystallographic open database (COD).
+
+For more on the CIF see: https://www.iucr.org/resources/cif</Description>
+    <PackageIconUrl>https://raw.githubusercontent.com/EliotJones/BioCif/master/icon.png</PackageIconUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/EliotJones/BioCif</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/EliotJones/BioCif</RepositoryUrl>
+    <PackageTags>PDBx mmCIF CIF Crystallographic Protein-Data-Bank</PackageTags>
+    <RepositoryType>git</RepositoryType>
+
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
 </Project>
